# test_paul

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
src/: alembic.ini  config.py  main.py  worker.py
src/app/api/: __init__.py  task.py
src/database/: enums.py  interface.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2025_07_03_1051-37593e10ba40_task_model.py
src/database/models/: base.py  task.py
src/database/schemas/: task.py
src/extentions/redis_connector/: client.py  enums.py  schemas.py
src/extentions/telegram_api/: client.py
