[project]
name = "paul-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Mindlin",email = "anton.mindlin@gmail.com"}
]
package-mode = false
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
per-file-ignores = [
    "__init__.py: F401",
]
